# LanChat

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  main.cpp
Client/Commands/: ChangePassCommand.h  ClientCommandRegistry.h  CreateRoomCommand.h  EditCommand.h  HistoryCommand.h  InviteCommand.h  JoinCommand.h  LoginCommand.h  PinCommand.h  RoomsCommand.h
Common/: CMakeLists.txt  Command.cpp  Command.h  CryptoHelper.cpp  CryptoHelper.h  NetworkUtils.h
Server/: AdminConsole.cpp  AdminConsole.h  CMakeLists.txt  ChatServer.cpp  ChatServer.h  DatabaseManager.cpp  DatabaseManager.h  main.cpp
Server/Commands/: HelpCommand.h  ServerCommandRegistry.h  UserCommand.h
Server/Commands/User/: UserAddCommand.h  UserDelCommand.h  UserListCommand.h  UserSetCommand.h
Server/Commands/User/Set/: UserSetNicknameCommand.h  UserSetPassCommand.h
Server/Database/: DatabaseManager.cpp  DatabaseManager.h  MessageRepository.cpp  MessageRepository.h  RoomRepository.cpp  RoomRepository.h  UserRepository.cpp  UserRepository.h
