add_executable(LanChatServer
        main.cpp
        ChatServer.cpp
        ChatServer.h
        Database/DatabaseManager.cpp
        Database/DatabaseManager.h
        AdminConsole.cpp
        AdminConsole.h
        Commands/HelpCommand.h
        Commands/UserCommand.h
        Commands/User/UserAddCommand.h
        Commands/ServerCommandRegistry.h
        Commands/User/UserDelCommand.h
        Commands/User/UserListCommand.h
        Commands/User/UserSetCommand.h
        Commands/User/Set/UserSetPassCommand.h
        Database/UserRepository.cpp
        Database/UserRepository.h
        Database/MessageRepository.cpp
        Database/MessageRepository.h
        Commands/User/Set/UserSetNicknameCommand.h
        Database/RoomRepository.cpp
        Database/RoomRepository.h
)

target_link_libraries(LanChatServer
        Qt::Core
        Qt::Network
        Qt::Sql
        LanChatCommon
)